Fixes CSS on mobile

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -8,6 +8,12 @@ $bp-larger-than-tablet    : "min-width: 750px" !default;
 $bp-larger-than-desktop   : "min-width: 1000px" !default;
 $bp-larger-than-desktophd : "min-width: 1200px" !default;
 
+$bp-smaller-than-mobile    : "max-width: 400px";
+$bp-smaller-than-phablet   : "max-width: 550px";
+$bp-smaller-than-tablet    : "max-width: 750px";
+$bp-smaller-than-desktop   : "max-width: 1000px";
+$bp-smaller-than-desktophd : "max-width: 1200px";
+
 // Colors
 $light-grey: #e1e1e1 !default;
 $dark-grey: #333 !default;
